Bug 952835 - Screen goes to sleep while video still playing in Metro Firefox. r=jimm, a=metro-only